@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-12T12:28:41Z",
-  "count_outdated" : 4971,
-  "uniques_outdated" : 2644,
+  "timestamp" : "2025-06-13T12:28:58Z",
+  "count_outdated" : 4982,
+  "uniques_outdated" : 2652,
   "count" : 5024,
   "uniques" : 2686,
   "clones" : [
-    {
-      "timestamp": "2025-05-30T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
-    },
     {
       "timestamp": "2025-05-31T00:00:00Z",
       "count": 1,
