@@ -1,12 +1,7 @@
 {
-  "count": 53,
-  "uniques": 40,
+  "count": 42,
+  "uniques": 33,
   "clones": [
-    {
-      "timestamp": "2025-05-30T00:00:00Z",
-      "count": 11,
-      "uniques": 8
-    },
     {
       "timestamp": "2025-05-31T00:00:00Z",
       "count": 1,
